# MIPT_ATP

./: README.md
.github/workflows/: main.yml
task-testing-python/: .coverage
task0/: file.txt
task1/: run.sh
task2/: .CMakeLists.txt.swp  CMakeLists.txt
task2/A/: index.h  preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: main.cpp  main_test.cpp
task3/: CMakeLists.txt  main_lib.cpp
task3/include/: buffer.h
task3/src/: .CMakeLists.txt.swp  buffer.cpp
task4/: .coverage
task4/src/weather_03/: weather_wrapper.py
task4/test_01/: test_get_month_days.py  test_leap.py
task4/test_02/: test_size_tree.py
task4/test_03/: test_weather.py
task4/tests/test_01/: test_add.py  test_get_month_days.py  test_leap.py
task4/tests/test_02/: test_size_tree.py  test_tree.py
task4/tests/test_03/: test_weather.py
task5/: Dockerfile
task5/cmake-with-flask/: CMakeLists.txt  Dockerfile
